# sound-visualisation-generator

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: backlog-item.md  bug_report.md  documentation.md  feature_request.md  pull_request_template.md
.github/workflows/: CODE_OF_CONDUCT.md  ci.yml
src/svg/: pipeline.py
tests/: test_gui.py  test_smoke.py
